--- a/src/package.xml
+++ b/src/package.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>AccountProcessor</members>
-        <members>AccountProcessorTest</members>
-        <members>LeadProcessor</members>
-        <members>LeadProcessorTest</members>
-        <name>ApexClass</name>
-    </types>
-    <version>42.0</version>
+	<types>
+		<members>AccountProcessor</members>
+		<members>AccountProcessorTest</members>
+		<members>LeadProcessor</members>
+		<members>LeadProcessorTest</members>
+		<members>AddPrimaryContact</members>
+		<members>AddPrimaryContactTest</members>
+		<name>ApexClass</name>
+	</types>
+	<version>42.0</version>
 </Package>
