Asynchronous Apex schedule Apex

--- a/src/package.xml
+++ b/src/package.xml
@@ -7,6 +7,8 @@
 		<members>LeadProcessorTest</members>
 		<members>AddPrimaryContact</members>
 		<members>AddPrimaryContactTest</members>
+		<members>DailyLeadProcessor</members>
+		<members>DailyLeadProcessorTest</members>
 		<name>ApexClass</name>
 	</types>
 	<version>42.0</version>
